book bump transition

--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -222,6 +222,7 @@ input[type='checkbox'] {
 .cover-container {
     height: 250px;
     position: relative;
+    transition: transform 0.15s;
 }
 
 .cover-container:hover {
