evil hackery to align wrapping labels

--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -159,6 +159,12 @@ body {
 
 input[type='checkbox'] {
     margin-right: 5px;
+    transform: translateY(5px);
+}
+
+.checkbox-row {
+    display: flex;
+    align-items: start;
 }
 
 .checkbox-pane {
