basic error message for page

--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -19,6 +19,10 @@ body {
     font-style: italic;
 }
 
+#backup-link {
+    text-decoration: underline;
+}
+
 .no-scroll {
     overflow: hidden;
 }
