--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -117,6 +117,16 @@ body {
     font-weight: lighter;
 }
 
+.small-bold-text {
+    color: #666;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.number-displayed-pane {
+    margin-bottom: 10px;
+}
+
 .filter-clear-all-row {
     height: 30px;
 }
@@ -467,6 +477,11 @@ input[type='checkbox'] {
         <div class="curriculum-note">
             <img class="heart-icon" src="../assets/heart-icon.svg" alt="heart icon">
             <div class="light-text">Curriculum is available</div>
+        </div>
+        <div class="number-displayed-pane light-text">
+            <span>Currently showing </span>
+            <span id="num-books-displayed" class="small-bold-text">0</span>
+            <span> books.</span>
         </div>
         <div class="filter-tag-pane">
             <div class="filter-clear-all-row">
