override frozen menu in mobile view

--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -401,6 +401,8 @@ input[type='checkbox'] {
     .menu-pane {
         width: 100%;
         margin-bottom: 20px;
+        /* Override position: sticky; in the mobile view. */
+        position: static;
     }
 
     .grid-item {
